apps/argocd-internet-facing/argocd-forwarded-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-forwarded-https
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
